plugins {
    id 'java'
    id 'java-library'
    id 'maven-publish'
    id 'com.gradleup.shadow' version '9.4.1'
    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.4.1'
    id 'xyz.wagyourtail.unimined' version '1.4.23-kappa'
    id 'net.kyori.blossom' version '2.2.0'
    id 'com.diffplug.spotless' version '8.4.0'
}

import org.jetbrains.gradle.ext.Gradle

apply from: 'gradle/scripts/helpers.gradle'

// Early Assertions
assertProperty 'mod_version'
assertProperty 'root_package'
assertProperty 'mod_id'
assertProperty 'mod_name'

assertSubProperties 'use_access_transformer', 'access_transformer_locations'
assertSubProperties 'is_coremod', 'coremod_includes_mod', 'coremod_plugin_class_name'
assertSubProperties 'use_asset_mover', 'asset_mover_version'

setDefaultProperty 'generate_sources_jar', true, false
setDefaultProperty 'generate_javadocs_jar', true, false
setDefaultProperty 'minecraft_username', true, 'Developer'
setDefaultProperty 'extra_jvm_args', false, ''

version = propertyString('mod_version')
group = propertyString('root_package')

base {
    archivesName = propertyString('mod_id')
}


java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
    if (propertyBool('generate_sources_jar')) {
        withSourcesJar()
    }
    if (propertyBool('generate_javadocs_jar')) {
        withJavadocJar()
    }
}

configurations {
    contain
    implementation.extendsFrom(contain)
    modCompileOnly
    compileOnly.extendsFrom(modCompileOnly)
    modRuntimeOnly
    runtimeOnly.extendsFrom(modRuntimeOnly)
}

String remapTaskName = propertyBool('enable_shadow') ? "remapShadowJar" : "remapJar"

unimined.minecraft {
    version "1.12.2"

    mappings {
        mcp("stable", "39-1.12")
    }

    cleanroom {
        if (propertyBool('use_access_transformer')) {
            accessTransformer "${rootProject.projectDir}/src/main/resources/${propertyString('access_transformer_locations')}"
        }
        loader "0.5.17-alpha"
        runs.all {
            args += ['--username', minecraft_username]
            def extraArgs = propertyString('extra_jvm_args')
            if (extraArgs != null && !extraArgs.trim().isEmpty()) {
                jvmArgs += extraArgs.split { "\\s+" }.toList()
            }
            if (propertyBool('enable_foundation_debug')) {
                systemProperty("foundation.dump", "true")
                systemProperty("foundation.verbose", "true")
            }
            if (propertyBool('is_coremod')) {
                systemProperty("fml.coreMods.load", propertyString('coremod_plugin_class_name'))
            }
            return
        }
    }

    defaultRemapJar = false
    
    String jarTaskName = propertyBool('enable_shadow') ? "shadowJar" : "jar"
    
    remap(tasks.named(jarTaskName).get()) {
        mixinRemap {
            enableBaseMixin()
            enableMixinExtra()
        }
    }

    mods {
        remap(configurations.modCompileOnly)
        remap(configurations.modRuntimeOnly)
    }
}

dependencies {
    if (propertyBool('use_asset_mover')) {
        implementation "com.cleanroommc:assetmover:${propertyString('asset_mover_version')}"
    }
    if (propertyBool('enable_junit_testing')) {
        testImplementation 'org.junit.jupiter:junit-jupiter:6.0.3'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }
}

apply from: 'gradle/scripts/dependencies.gradle'

processResources {
    rename '(.+_at.cfg)', 'META-INF/$1'
}

sourceSets {
    stubApi {
        java {
            srcDir 'src/api/java'
        }
        compileClasspath += sourceSets.main.compileClasspath
        runtimeClasspath += output + compileClasspath
    }

    main {
        compileClasspath += sourceSets.stubApi.output
        runtimeClasspath += sourceSets.stubApi.output

        blossom {
            javaSources {
                property('mod_id', propertyString('mod_id'))
                property('mod_name', propertyString('mod_name'))
                property('mod_version', propertyString('mod_version'))
                property('root_package', propertyString('root_package'))
                property('mod_id', propertyString('mod_id'))
            }
            resources {
                property('mod_id', propertyString('mod_id'))
                property('mod_name', propertyString('mod_name'))
                property('mod_version', propertyString('mod_version'))
                property('mod_description', propertyString('mod_description'))
                property('mod_authors', propertyStringList('mod_authors', ',').collect {it.strip()}.join('", "'))
                property('mod_credits', propertyString('mod_credits'))
                property('mod_url', propertyString('mod_url'))
                property('mod_update_json', propertyString('mod_update_json'))
                property('mod_logo_path', propertyString('mod_logo_path'))
            }
        }
    }

    test {
        compileClasspath += sourceSets.main.compileClasspath
        runtimeClasspath += sourceSets.main.runtimeClasspath
    }
}

configurations.named('stubApiImplementation').configure {
    extendsFrom(configurations.implementation)
}
configurations.named('stubApiCompileOnly').configure {
    extendsFrom(configurations.compileOnly)
}
configurations.named('stubApiAnnotationProcessor').configure {
    extendsFrom(configurations.annotationProcessor)
}
configurations.named('stubApiRuntimeOnly').configure {
    extendsFrom(configurations.runtimeOnly)
}

idea {
    module {
        inheritOutputDirs = true
    }
    project {
        settings {
            runConfigurations {
                '0. Apply Spotless'(Gradle) {
                    taskNames = ["spotlessApply"]
                }
                '1. Build'(Gradle) {
                    taskNames = ["build"]
                }
                '2. Run Client'(Gradle) {
                    taskNames = ["runClient"]
                }
                '3. Run Server'(Gradle) {
                    taskNames = ["runServer"]
                }
            }
            compiler.javac {
                afterEvaluate {
                    javacAdditionalOptions = '-encoding utf8'
                    moduleJavacAdditionalOptions = [
                            (project.name + '.main'): tasks.compileJava.options.compilerArgs.collect { '"' + it + '"' }.join(' ')
                    ]
                }
            }
        }
    }
}

if (!propertyBool('enable_shadow')) {
    shadowJar.enabled = false
}

compileJava {
    dependsOn(tasks.named('compileStubApiJava'))
    sourceCompatibility = targetCompatibility = JavaVersion.VERSION_25
}

jar {
    archiveClassifier = 'dev'
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    if (configurations.contain.size() > 0) {
        into('/') {
            from configurations.contain
        }
    }
    doFirst {
        manifest {
            def attribute_map = [:]
            attribute_map['ModType'] = "CRL"
            if (configurations.contain.size() > 0) {
                attribute_map['ContainedDeps'] = configurations.contain.collect { it.name }.join(' ')
                attribute_map['NonModDeps'] = true
            }
            if (propertyBool('is_coremod')) {
                attribute_map['FMLCorePlugin'] = propertyString('coremod_plugin_class_name')
                if (propertyBool('coremod_includes_mod')) {
                    attribute_map['FMLCorePluginContainsFMLMod'] = true
                }
            }
            if (propertyBool('use_access_transformer')) {
                attribute_map['FMLAT'] = propertyString('access_transformer_locations')
            }
            attributes(attribute_map)
        }
    }
    finalizedBy(tasks.named(remapTaskName).get())
}


shadowJar {
    configurations = [project.configurations.shadow]
    archiveClassifier = "shadow"
}


tasks.named(remapTaskName).configure {
    doFirst {
        logging.captureStandardOutput LogLevel.INFO
    }
    doLast {
        logging.captureStandardOutput LogLevel.QUIET
    }
}

compileTestJava {
    sourceCompatibility = targetCompatibility = JavaVersion.VERSION_25
}

test {
    useJUnitPlatform()
    javaLauncher.set(javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(25)
    })
    if (propertyBool('show_testing_output')) {
        testLogging {
            showStandardStreams = true
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

apply from: 'gradle/scripts/publishing.gradle'
apply from: 'gradle/scripts/extra.gradle'
